feat: set deck name field as optional when searching
