# build/api/swagger.json
@@ -444,40 +444,12 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"FindDeckResponse": {
-				"properties": {
-					"decks": {
-						"items": {
-							"$ref": "#/components/schemas/IDeck"
-						},
-						"type": "array",
-						"nullable": true
-					},
-					"quantity": {
-						"type": "number",
-						"format": "double"
-					},
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"decks",
-					"quantity",
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"FindDeckParams": {
 				"properties": {
 					"deck_name": {
 						"type": "string"
 					}
 				},
-				"required": [
-					"deck_name"
-				],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -961,7 +933,23 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/FindDeckResponse"
+									"properties": {
+										"quantity": {
+											"type": "number",
+											"format": "double"
+										},
+										"decks": {
+											"items": {
+												"$ref": "#/components/schemas/IDeck"
+											},
+											"type": "array"
+										}
+									},
+									"required": [
+										"quantity",
+										"decks"
+									],
+									"type": "object"
 								}
 							}
 						}
