# src/controllers/findDeckController.ts
@@ -5,7 +5,7 @@ import {
     Post,
     Route,
 } from "tsoa";
-import { ObjectId, WithId, Document } from "mongodb";
+import { ObjectId } from "mongodb";
 import * as exp from "express";
 import { col } from "../utils";
 
@@ -15,47 +15,35 @@ interface IDeck {
     name: string
 }
 
-type Doc<T> = T & WithId<Document>;
-
-interface FindDeckResponse {
-    decks: IDeck[] | null,
-    quantity: number,
-    message: string
-}
-
 interface FindDeckParams {
-    deck_name: string
+    deck_name?: string
 }
 
 @Route("/api/v1/findDeck")
 export class FindDeckController extends Controller {
 
     @Post()
-    public async findDeck(@Body() body: FindDeckParams, @Request() req: exp.Request): Promise<FindDeckResponse> {
+    public async findDeck(@Body() body: FindDeckParams, @Request() req: exp.Request) {
 
         const user_id = new ObjectId(req.res?.locals.jwt.sub);
 
         const deckQuery = {
-            name: { $regex: body.deck_name, $options: 'i' },
-            id_user: user_id
+            id_user: user_id,
+            name: !body.deck_name ? undefined : {
+                $regex: body.deck_name,
+                $options: 'i'
+            }
         };
 
-        const decks = await col("deck").find(deckQuery).toArray() as Doc<IDeck>[];
-
-        if (decks.length === 0) {
-            this.setStatus(404);
-            return {
-                decks: [],
-                quantity: 0,
-                message: "Server could not find deck."
-            };
+        if (deckQuery.name === undefined) {
+            delete deckQuery.name;
         }
 
-        this.setStatus(200);
+        const decks = await col("deck").find(deckQuery).toArray() as IDeck[];
+
         return {
             decks: decks,
-            quantity: decks.length,
-            message: "Success: Searched"
+            quantity: decks.length
         };
     }
 
